# StingRay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/common/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  stingray_util.h  vec3.h
tests/: CMakeLists.txt  ray_test.cpp  vec3_test.cpp
